objects/Address__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Address</externalName>
    <fields>
        <fullName>AddressType__c</fullName>
        <externalDeveloperName>AddressType</externalDeveloperName>
        <label>Address Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <externalDeveloperName>CountryCode</externalDeveloperName>
        <label>Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrivingDirections__c</fullName>
        <externalDeveloperName>DrivingDirections</externalDeveloperName>
        <label>Driving Directions</label>
        <length>1000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationAddress_c__c</fullName>
        <externalDeveloperName>LocationAddress__c</externalDeveloperName>
        <label>Location Address</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <externalDeveloperName>LocationType</externalDeveloperName>
        <label>Location Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
                <value>
                    <fullName>Plant</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_AccountKey_c__c</fullName>
        <externalDeveloperName>SAP_AccountKey__c</externalDeveloperName>
        <label>SAP Account Key</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_AddressStateCode_c__c</fullName>
        <externalDeveloperName>SAP_AddressStateCode__c</externalDeveloperName>
        <label>SAP Address State/Province</label>
        <length>3</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State/Province</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <externalDeveloperName>TimeZone</externalDeveloperName>
        <label>Time Zone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                    <label>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</label>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                    <label>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</label>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                    <label>(GMT+13:00) Tonga Standard Time (Pacific/Tongatapu)</label>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                    <label>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</label>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                    <label>(GMT+12:00) Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</label>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                    <label>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</label>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                    <label>(GMT+12:00) Fiji Standard Time (Pacific/Fiji)</label>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                    <label>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</label>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                    <label>(GMT+11:00) Norfolk Island Time (Pacific/Norfolk)</label>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                    <label>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</label>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                    <label>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</label>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                    <label>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</label>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</label>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</label>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                    <label>(GMT+09:00) Korean Standard Time (Asia/Seoul)</label>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                    <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                    <label>(GMT+08:00) Hong Kong Standard Time (Asia/Hong_Kong)</label>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                    <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                    <label>(GMT+08:00) Philippine Standard Time (Asia/Manila)</label>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                    <label>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</label>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                    <label>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</label>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                    <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                    <label>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</label>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                    <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                    <label>(GMT+06:00) Bangladesh Standard Time (Asia/Dhaka)</label>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                    <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Addresses</pluralLabel>
</CustomObject>